# YouthScheduleAutomator

./: .gitignore  ACCORDION_REPLACEMENT.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION.md  QUICKSTART.md  README.md  TASKS_COMPLETE.md  accordion-section.txt  eslint.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  test-determinism.ts  test-group-pool-seed.ts  test-seed-variation.ts
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml
doc/AI/: CARD_UI_MIGRATION.md  CLEANUP_SUMMARY.md  DETERMINISM.md  DETERMINISM_EXAMPLE.md  README.md  RESTRUCTURE_SUMMARY.md  SCHEDULE_FILE_REDESIGN_PLAN.md  TASKS_COMPLETE.md  UI_REORGANIZATION_PLAN.md
public/: example-config.json  example-groups.json  example-leaders.json  example-people.json  example-rules.json
scheduling/: __init__.py  config.py  exporters.py  groups.yaml  gui.py  leaders.yaml  main.py  models.py  rules.py  rules.yaml  scheduler.py  strategies.py
src/: App.css  App.old.css  App.old.tsx  App.tsx  exporters.ts  index.css  models.ts  rules.ts  scheduleFile.ts  scheduler.ts  serialization.ts  strategies.ts  utils.ts
src/components/: ExportView.tsx  GroupsView.tsx  Header.tsx  LeadersView.tsx  RulesView.tsx  ScheduleView.tsx  Sidebar.tsx  WelcomeView.tsx  index.ts
src/hooks/: index.ts  useFilters.ts  useScheduleFile.ts
src/utils/: localStorage.ts
tests/: test_rotation.py
web/: CONFIG_FORMAT.md  README.md  index.html  vite.config.ts
web/public/: example-people.json  (+1 more)
(+5 files in other folders)
